<resources>
    <string name="app_name"></string>
    <string name="Bienvenida">Bienvenido a Easy Booking</string>
    <string name="Btn_Ingresar">Ingresar</string>
    <string name="TxtCuenta">¿No tienes una cuenta? Regístrate</string>
    <string name="TxtReservaciones">Reservaciones</string>
    <string name="TxtHome">Inicio</string>
    <string name="TxtSearch">Buscar</string>
    <string name="TxtSave">Guardar</string>
    <string name="TxtNotify">Notificaciones</string>
    <string name="TextbtnTiempo">Hoy 13:00</string>
    <string name="TextbtnLugar">Ciudad, Guatemala</string>
    <string name="TextReserva">Reserva para hoy</string>
    <string name="TextReservaD">Reserva para después</string>
    <string name="TextbtnVerTodos">Ver todos</string>

    <string name="TxtHora1">13:00</string>
    <string name="TxtHora2">14:00</string>
    <string name="TxtHora3">13:30</string>
    <string name="TxtHora4">14:30</string>

    <string name="TxtNombreR1">Restaurante x</string>
    <string name="TxtNombreR2">Restaurante y</string>
    <string name="TxtTipoComida1">Comida gourmet</string>
    <string name="TxtTipoComida2">Pizzería</string>

    <string name="txtTitLugar">Mapa del Restaurante</string>
    <string name="txtNombreRestaurante">Restaurante X</string>
    <string name="TxtCreacionC">Crear Cuenta</string>
    <string name="nombreApp">Easy Booking</string>


    <string name="TxtNombre">Nombre</string>
    <string name="TxtApellido">Apellido</string>
    <string name="TxtFechaNac">Fecha de Nacimiento</string>
    <string name="TxtCorreoElect">Correo Electrónico</string>
    <string name="TxtContra">Contraseña</string>
    <string name="TxtConfir">Confirmar Contraseña</string>

    <string name="TxtAceptar">Aceptar términos y condiciones</string>
    <string name="BtnCrearCuenta">Crear Cuenta</string>
    <string name="BtnIniciarSession">Iniciar Sesión</string>

    <string name="TxtElegir">Elegir</string>

    <string name="lblAreaN">Área Norte</string>
    <string name="lblAreaS">Área Sur</string>
    <string name="lblAreaE">Área Este</string>
    <string name="lblAreaO">Área Oeste</string>

    <string-array name="Lugares">
        <item>Seleccione un lugar</item>
        <item>Terraza</item>
        <item>Jardín Principal</item>
        <item>Primer Nivel</item>
        <item>Segundo Nivel</item>
    </string-array>

    <string name="lblHorario">Horarios</string>
    <string name="lblJornada">Jornada</string>

    <string-array name="Jornadas">
        <item>Matutina</item>
        <item>Vespertina</item>
        <item>Nocturna</item>
    </string-array>

    <string-array name="Dia">
        <item>Lunes 25 de julio del 2022</item>
        <item>Martes 26 de julio del 2022</item>
        <item>Miércoles 27 de julio del 2022</item>
        <item>Jueves 28 de julio del 2022</item>
        <item>Viernes 29 de julio del 2022</item>
        <item>Sábado 30 de julio del 2022</item>
        <item>Domingo 31 de julio del 2022</item>
    </string-array>


    <string-array name="Numero_Mesa">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="lblBtnSeleccionarH">Seleccionar Horario</string>
    <string name="TxtIniciar">Iniciar Sesión</string>
    <string name="TxtUser">Usuario</string>
    <string name="TxtInicioContra">Contraseña</string>
    <string name="TxtOlvido">¿Ha olvidado la contraseña?</string>
    <string name="TxtInicioS">Iniciar Sesión</string>
    <string name="TxtCrearCS">Crear Cuenta</string>

    <string name="lblHora1">De 7:00 a 8:00</string>

    <string name="lblReservacion">Seleccionar una Mesa</string>
    <string name="lblAreaX">Area X</string>
    <string name="lblMesa1">1</string>
    <string name="lblMesa2">2</string>
    <string name="lblMesa3">3</string>
    <string name="lblMesa4">4</string>
    <string name="lblMesa5">5</string>

    <string name="lblNumeroMesa">Seleccione el número de mesa</string>
    <string name="lblReservar">Reservar</string>
    <string name="lblLiberar">Liberar</string>
    <string name="lblSeleccionarHorario">Seleccionar Horario</string>

    <string name="lblHora2">De 8:00 a 9:00</string>
    <string name="lblHora3">De 9:00 a 10:00</string>
    <string name="lblHora4">De 10:00 a 11:00</string>
    <string name="lblHora5">De 11:00 a 12:00</string>
    <string name="lblAlerta">¿Desea confirmar las reservaciones?</string>


    <string name="textViewNombre">nombre</string>



</resources>