<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarSesion">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="52dp"
        android:layout_height="60dp"
        android:layout_marginBottom="40dp"
        android:background="@color/cafe_claro"
        android:clickable="true"
        android:onClick="IrInicio"
        android:paddingTop="-10dp"
        app:backgroundTint="@color/cafe_oscuro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/white"
        app:srcCompat="@drawable/flecha"
        app:tint="@android:color/white"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button14"
        android:layout_width="379dp"
        android:layout_height="58dp"
        android:layout_marginTop="24dp"
        android:background="@color/transparente"
        android:text="@string/TxtOlvido"
        android:textAllCaps="false"
        android:textColor="@color/cafe_oscuro"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarr2" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar15"
        android:layout_width="415dp"
        android:layout_height="75dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar16"
        android:layout_width="411dp"
        android:layout_height="6dp"
        android:layout_marginTop="72dp"
        android:background="@color/naranja"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/TxtInicioS"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_IniSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar16"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="321dp"
        android:layout_height="55dp"
        android:layout_marginTop="74dp"
        android:background="@drawable/curved_tool"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_IniSesion" />

    <ImageView
        android:id="@+id/imageView_user1"
        android:layout_width="38dp"
        android:layout_height="41dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="256dp"
        app:layout_constraintEnd_toEndOf="@+id/toolbar1"
        app:layout_constraintStart_toStartOf="@+id/toolbar1"
        app:layout_constraintTop_toTopOf="@+id/toolbar1"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarr2"
        android:layout_width="321dp"
        android:layout_height="55dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/curved_tool"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_IniSesion" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="226dp"
        android:layout_height="38dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="11dp"
        android:background="@drawable/curved_input"
        android:ems="10"
        android:hint="@string/TxtUser"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:textColorHint="@color/cafe_claro"
        app:layout_constraintEnd_toEndOf="@+id/toolbar1"
        app:layout_constraintStart_toStartOf="@+id/toolbar1"
        app:layout_constraintTop_toTopOf="@+id/toolbar1"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="226dp"
        android:layout_height="38dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="11dp"
        android:background="@drawable/curved_input"
        android:ems="10"
        android:hint="@string/TxtInicioContra"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:textColorHint="@color/cafe_claro"
        app:layout_constraintEnd_toEndOf="@+id/toolbarr2"
        app:layout_constraintStart_toStartOf="@+id/toolbarr2"
        app:layout_constraintTop_toTopOf="@+id/toolbarr2"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="Ingresar"
        android:text="@string/BtnIniciarSession"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button14" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:onClick="Crear"
        android:text="@string/TxtCrearCS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button15" />

    <ImageView
        android:id="@+id/imageView_contra1"
        android:layout_width="38dp"
        android:layout_height="41dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="254dp"
        app:layout_constraintEnd_toEndOf="@+id/toolbarr2"
        app:layout_constraintStart_toStartOf="@+id/toolbarr2"
        app:layout_constraintTop_toTopOf="@+id/toolbarr2"
        tools:srcCompat="@tools:sample/avatars" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/naranja"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_IniSesion" />

</androidx.constraintlayout.widget.ConstraintLayout>